--- a/.github/workflows/release-v4.yml
+++ b/.github/workflows/release-v4.yml
@@ -36,3 +36,7 @@ jobs:
         with:
           github_token: ${{secrets.GTOKEN}}
           branch: v4
+      - name: release
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
