--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
       - name: setup Node
         uses: actions/setup-node@v6
         with:
-          node-version: 20.x
+          node-version: 24
           registry-url: 'https://registry.npmjs.org'
       - name: install dependencies
         run: npm i
